crates/xifty-cli/tests/snapshots/cli_contract__validate_conflicts_png_report.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 660
expression: "extract_json(\"validate_conflicts.png\", ViewMode::Report)"
---
{
  "input": {
    "container": "png",
    "detected_format": "png",
    "path": "validate_conflicts.png"
  },
  "report": {
    "conflicts": [
      {
        "field": "captured_at",
        "message": "xmp:CreateDate=2024-04-16T12:34:56 vs exif:DateTimeOriginal=2024:04:16 12:34:56",
        "sources": [
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 989,
              "offset_start": 371,
              "path": "xmp_packet"
            },
            "tag_id": "CreateDate",
            "tag_name": "CreateDate",
            "value": {
              "kind": "string",
              "value": "2024-04-16T12:34:56"
            }
          },
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 187,
              "offset_start": 175,
              "path": "exif_ifd"
            },
            "tag_id": "0x9003",
            "tag_name": "DateTimeOriginal",
            "value": {
              "kind": "timestamp",
              "value": "2024:04:16 12:34:56"
            }
          }
        ]
      },
      {
        "field": "device.make",
        "message": "multiple candidates disagreed; selected Make from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 87,
              "offset_start": 75,
              "path": "ifd0"
            },
            "tag_id": "0x010F",
            "tag_name": "Make",
            "value": {
              "kind": "string",
              "value": "Canon"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 989,
              "offset_start": 371,
              "path": "xmp_packet"
            },
            "tag_id": "Make",
            "tag_name": "Make",
            "value": {
              "kind": "string",
              "value": "Nikon"
            }
          }
        ]
      },
      {
        "field": "device.model",
        "message": "multiple candidates disagreed; selected Model from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 99,
              "offset_start": 87,
              "path": "ifd0"
            },
            "tag_id": "0x0110",
            "tag_name": "Model",
            "value": {
              "kind": "string",
              "value": "IterationOne"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 989,
              "offset_start": 371,
              "path": "xmp_packet"
            },
            "tag_id": "Model",
            "tag_name": "Model",
            "value": {
              "kind": "string",
              "value": "IterationTwo"
            }
          }
        ]
      },
      {
        "field": "software",
        "message": "multiple candidates disagreed; selected Software from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 123,
              "offset_start": 111,
              "path": "ifd0"
            },
            "tag_id": "0x0131",
            "tag_name": "Software",
            "value": {
              "kind": "string",
              "value": "XIFtyTestGen"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 989,
              "offset_start": 371,
              "path": "xmp_packet"
            },
            "tag_id": "Software",
            "tag_name": "Software",
            "value": {
              "kind": "string",
              "value": "XIFtyXmpGen"
            }
          }
        ]
      },
      {
        "field": "dimensions.width",
        "message": "multiple candidates disagreed; selected ImageWidth from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 63,
              "offset_start": 51,
              "path": "ifd0"
            },
            "tag_id": "0x0100",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 800
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 989,
              "offset_start": 371,
              "path": "xmp_packet"
            },
            "tag_id": "ImageWidth",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 640
            }
          }
        ]
      },
      {
        "field": "dimensions.height",
        "message": "multiple candidates disagreed; selected ImageHeight from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "png",
              "namespace": "exif",
              "offset_end": 75,
              "offset_start": 63,
              "path": "ifd0"
            },
            "tag_id": "0x0101",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 600
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "png",
              "namespace": "xmp",
              "offset_end": 989,
              "offset_start": 371,
              "path": "xmp_packet"
            },
            "tag_id": "ImageHeight",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 480
            }
          }
        ]
      }
    ],
    "issues": []
  },
  "schema_version": "0.1.0"
}
